webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 集群内部的
      port: 16379
      # redis 本身的端口
      targetPort: 6379
      # 集群外部的
      nodePort: 30009
  type: NodePort
