webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      # 监听什么端口
      port: 80
      # 转发到 POD 的什么端口
      targetPort: 8080
